plugins {
    id 'java'
    id 'maven-publish'
    id 'signing'
    id 'org.jreleaser' version '1.13.1'
}

group = "blue.language"
version = "0.1.0-SNAPSHOT"
archivesBaseName = "blue-language-java"

repositories {
    mavenCentral()
}

java {
    withJavadocJar()
    withSourcesJar()
}

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

compileTestJava {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}


dependencies {
    // JUnit Jupiter (JUnit 5)
    testImplementation(platform("org.junit:junit-bom:5.9.1"))
    testImplementation("org.junit.jupiter:junit-jupiter")

    // Jackson
    implementation("com.fasterxml.jackson.core:jackson-databind:2.15.2")
    implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.15.2")

    implementation("commons-codec:commons-codec:1.15")

    implementation("org.apache.httpcomponents:httpclient:4.5.14")

    implementation("org.reflections:reflections:0.10.2")

}

test {
    useJUnitPlatform()
    reports {
        junitXml.required = false
        html.required = true
    }
}

ext.genResourcesDir = file("$buildDir/generated-resources")
task generateBuildProperties {
    ext.buildPropertiesFile = file("$genResourcesDir/blue/language/build.properties")
    outputs.file(buildPropertiesFile)
    doLast {
        buildPropertiesFile.text = """\
                |blue-language-java.build.version=$project.version
                |blue-language-java.build.timestamp=${new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")}
        """.stripMargin().trim()
    }
}
sourceSets.main.output.dir genResourcesDir, builtBy: generateBuildProperties


tasks.withType(GenerateModuleMetadata) {
    enabled = false
}

publishing {
  publications {
      maven(MavenPublication) {
          groupId = "blue.language"
          artifactId = 'blue-language-java'

          from components.java

          pom {
              name = 'Blue Language Java Library'
              description = 'Java client library for Blue Language'
              url = 'https://timeline.blue'
              licenses {
                  license {
                      name = 'MIT license'
                      url = 'https://github.com/bluecontract/blue-language-java/blob/master/LICENSE'
                  }
              }
              developers {
                  developer {
                      name = 'Blue'
                      email = 'devsupport@timeline.blue'
                  }
              }
              scm {
                  url = 'https://github.com/bluecontract/blue-language-java.git'
                  connection = 'scm:git:git@github.com:bluecontract/blue-language-java.git'
                  developerConnection = 'scm:git:git@github.com:bluecontract/blue-language-java.git'
              }
          }
      }
  }

  repositories {
      maven {
          url = layout.buildDirectory.dir('staging-deploy')
      }
  }
}

jreleaser {
  signing {
    active = 'ALWAYS'
    armored = true
  }
  project {
    description = 'Java client library for Blue Language'
    copyright = '© 2024 Blue Company. Licensed under the MIT License'
  }

  deploy {
    maven {
      mavenCentral {
        sonatype {
          active = 'ALWAYS'
          url = 'https://central.sonatype.com/api/v1/publisher'
          applyMavenCentralRules = true
          snapshotSupported = true
          stagingRepository('build/staging-deploy')
        }
      }
    }
  }
}
